[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.3,<0.35.0"}
openai = ">=1.0.0"
requests = ">=2.32.3,<3.0.0"
typer = ">=0.16.0,<0.17.0"
python-dotenv = ">=1.1.0,<2.0.0"
numpy = ">=2.2.6,<3.0.0"
rich = ">=14.0.0,<15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
